# kscli

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/kscli/: __init__.py  _entry.py  cli.py  config.py
src/kscli/core/: account_manager.py  cli_runner.py  mumu_adapter.py  proxy_config.py  register_flow.py  session_runner.py  sms_5sim.py
src/kscli/models/: database.py  schemas.py
