[metadata]
name = kscli
version = 1.0.0
description = Kuaishou CLI automation engine for MuMu Player Pro
author = mun0602
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    uiautomator2>=3.5.0
    adbutils>=2.12.0
    requests
    python-dotenv
    tomli>=2.0; python_version < "3.11"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dk = kscli._entry:main
